--- a/index.html
+++ b/index.html
@@ -239,8 +239,7 @@ body{   background-image:url(https://i.imgur.com/Oax2Jeg.jpg);
 .player::before {
     content: "";
     display: block;
-    position: relative;
-    left: 150px
+    position: left;
     width: calc(40% -20px);
     height: 360px;
     max-width: 395px;
