--- a/index.html
+++ b/index.html
@@ -315,19 +315,19 @@ background-image: url(https://i.pinimg.com/originals/f4/db/6f/f4db6fff7d8c50709e
 				<div class="box blurbs">
 					<div class="rightHead"><b><span class="uName"></span>Photos</b></div>
 			<h4>About me:</h4>
-			<div id="about"><p>here's a little bit about me:</p>
+			<h4>My hobbies:</h4>
+			<div id="about"><p></p>
 <ul>
-<li>i got discord, just ask me and we can chat!</li>
-<li>i play minecraft sometimes</li>
-<li>i mostly listen to emo and indie music</li>
-<li>i love horse riding</li>
-<li>i love chatting!</li>
+<li>horse riding! I'm a showjumper</li>
+<li>playing the ukulele</li>
+<li>coding</li>
+<li>traveling</li>
 </ul>
-<p>I might be a little awkward but still, please do talk to me! (i would appreciate if u sent the first message)</p>
-<p>css: used parts of the template made by oranis (however i changed most of it)</p></div>
-			<h4>Who I'd like to meet:</h4>
+<p>I'm a rising junior</p>
+</div>
+			<h4>My school:</h4>
 			<div id="who">
-				<p>anyone who wants to be my friend!</p>			</div>	
+				<p>Bilkent Laborotary International School in Ankara, Turkey</p>			</div>	
 		</div>
 		<div class="box fwiends">
 			<div class="rightHead"><b><span class="uName">angellll</span>'s Fwiends Space</b></div>
